# ticketapibuilder-yvitamn

./: .gitignore  README.md  app.py  pyproject.toml
config/: base.py  database.py  local.py  settings.py
instance/: database.py
migrations/: env.py
migrations/versions/: 5c0c0de67873_initial_migration.py
models/: __init__.py  ticket_model.py
repos/: base_repo.py  ticket_repo.py
routers/: __init__.py  ticket_router.py
schemas/: ticket_schema.py
services/: ticket_service.py
shared/: __init__.py  error_handlers.py
shared/database/: chrono.py
